// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage should show the component with a personalized image 1`] = `
<img
  alt="Product"
  className="productImg undefined"
  src="http://hola.jpg"
/>
`;

exports[`ProductImage should show the component with the product image 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;
